--- a/Style/style.css
+++ b/Style/style.css
@@ -293,7 +293,7 @@ body {
     position: relative;
     align-items: center;
     padding: 100px 110px;
-    margin-top: 2rem;
+    margin-top: 4rem;
     background-color: #dcfaffbd;
     z-index: 0;
 }
@@ -365,4 +365,74 @@ body {
     letter-spacing: 0.5px;
     font-weight: bold;
     color: #000;
+}
+
+.blog-container {
+    width: 100%;
+    display: flex;
+    justify-content: space-between;
+    margin-top: 5rem;
+}
+
+.blog-card {
+    border-radius: 12px;
+    padding: 20px;
+    width: 100%;
+    text-align: left;
+}
+
+.blog-card img {
+    width: 370px;
+    height: 300px;
+    border-radius: 10px;
+    border: 2px solid #30B0C7;
+    transition: 0.2s;
+}
+
+.blog-card img:hover {
+    box-shadow: 4px 4px 0px #30B0C7;
+}
+
+.tags {
+    display: flex;
+    gap: 10px;
+    margin: 10px 0;
+}
+
+.tag {
+    border: 1px solid #30B0C7;
+    padding: 5px 12px;
+    border-radius: 20px;
+    margin-top: 10px;
+    font-size: 12px;
+    color: #30B0C7;
+    transition: 0.2s;
+}
+
+.tag:hover {
+    background-color: #30B0C7;
+    color: white;
+}
+
+.blog-card h3 {
+    font-family: 'Poppins-Medium';
+    font-size: 30px;
+    margin: 20px 0;
+    font-weight: bold;
+}
+
+.blog-card p {
+    font-family: 'Poppins-Light';
+    font-size: 14px;
+    color: #555;
+    margin-bottom: 27px;
+}
+
+.footer {
+    width: 100%;
+    height: 20px;
+    align-items: center;
+    padding: 0px 110px;   
+    margin-top: 10rem;
+    background-color: black;
 }
