--- a/Style/style.css
+++ b/Style/style.css
@@ -185,6 +185,7 @@ body {
     display: flex;
     justify-content: center;
     margin-top: -6rem;
+    flex-wrap: wrap;
 }
 
 .logo-container {
@@ -447,6 +448,9 @@ body {
 }
 /* Mobile Responsive Navbar */
 @media only screen and (max-width: 575px){
+    body{
+        overflow-x: hidden;
+    }
     .menu-bar{
         display: block;
     }
@@ -485,44 +489,82 @@ body {
     .nav-links li{
         margin: 30px auto;
     }
-}
-@media only screen and (min-width: 576px) and (max-width: 767px){
-    .menu-bar{
-        display: block;
-    }
-    .navbar{
-        padding: 0;
-    }
-    .logo{
-        position: absolute;
-        top: 30px;
-        left: 30px;
-    }
-    .nav-links{
-        flex-direction: column;
-        width: 100%;
-        height: 70vh;
-        justify-content: center;
-        margin-top: -160%;
-        transition: all 0.5s ease;
-    }
-    .auth-buttons {
-        position: absolute;
-        top: 80%;
-        left: 51%;
-        transform: translate(-50%, -50%);
-        display: flex;
-        flex-direction: column;
-        align-items: center;
-        margin-top: -170%;
-        transition: all 0.5s ease;
-    }
-    
-    .mobile-menu{
-        margin-top: 0;
+
+    .judul-text1{
+        width: 50%;
+        height: 40vh;
     }
 
-    .nav-links li{
-        margin: 30px auto;
+    .hero-content {
+        display: flex;
+        flex-wrap: wrap;
+        justify-content: space-between;
+        width: 100%;
     }
+    .hero-content p {
+        flex: 1;
+        min-width: 300px;
+    }
+    
+    .buttons{
+        height: 10vh;
+        display: flex;
+        margin-top: 300px;
+    }
+
+    .primary-btn{
+        height: 15vh;
+        width: 25vw;
+    }
+    .secondary-btn{
+        height: 15vh;
+        width: 25vw;
+    }
+
+    .brand-logos{
+        margin-top: 50%;
+    }
+    .hero-image{
+        transform: scale(2.4); /* Perbesar 1.5x */
+        transition: transform 0.3s ease-in-out;
+    }
+    .hero {
+        display: grid;
+        grid-template-areas: 
+            "text"
+            "image";
+        text-align: center;
+    }
+    
+    .hero-content {
+        grid-area: text;
+    }
+    
+    .hero-image {
+        grid-area: image;
+        width: 80%;
+        max-width: 180px;
+        margin-left: 40px;
+        margin-top: -110px;
+    }
+    
+    .brand-logos{
+        margin-top: 700px;
+        .brand-logo {
+            max-width: 100%; /* Supaya tidak lebih besar dari container */
+            height: auto;
+        }
+        
+    }
+    .logo-container{
+        overflow: visible; /* Pastikan tidak terpotong */
+        display: flex;
+        justify-content: space-around; /* Menjaga jarak antar brand */
+        align-items: center;
+        flex-wrap: wrap; /* Supaya tidak terpotong jika ukuran terlalu kecil */
+    }
+    .makanan{
+
+    }
+    
 }
